[tool.poetry]
name = "fly2-emirates-parser"
version = "0.1.0"
description = ""
authors = ["MankoMax <fanatscape@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.23.1"
undetected-chromedriver = "^3.5.5"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
